# feature options
option(
  'service',
  type : 'boolean',
  value : true,
  description : 'Enable/Disable background service')
option(
  'create',
  type : 'boolean',
  value : true,
  description : 'Enable/Disable bundle creation and modification commands')
option(
  'network',
  type : 'boolean',
  value : true,
  description : 'Enable/Disable network update mode')
option(
  'streaming',
  type : 'boolean',
  value : true,
  description : 'Enable/Disable streaming update mode')
option(
  'json',
  type : 'feature',
  value : 'enabled',
  description : 'Enable/Disable JSON support')
option(
  'gpt',
  type : 'feature',
  value : 'auto',
  description : 'Enable/Disable GPT support')
option(
  'composefs',
  type : 'feature',
  value : 'disabled',
  description : 'Enable/Disable composefs artifact installation support')
option(
  'pkcs11_engine',
  type : 'boolean',
  value : true,
  description : 'Enable/Disable OpenSSL PKCS11 engine support (legacy)')
option(
  'pkcs11_providers',
  type : 'boolean',
  value : false,
  description : 'Enable/Disable OpenSSL PKCS11 providers support')

# other options
option(
  'streaming_user',
  type : 'string',
  value : 'nobody',
  description : 'unpriviledged user for the streaming subprocess')

# path options
option(
  'systemdunitdir',
  type : 'string',
  value : '',
  description : 'Directory for systemd service files')
option(
  'systemdcatalogdir',
  type : 'string',
  value : '',
  description : 'Directory for systemd journal catalog files')
option(
  'dbuspolicydir',
  type : 'string',
  value : '',
  description : 'D-Bus policy directory')
option(
  'dbussystemservicedir',
  type : 'string',
  value : '',
  description : 'D-Bus system service directory')
option(
  'dbusinterfacesdir',
  type : 'string',
  value : '',
  description : 'D-Bus interfaces directory')

# build options
option(
  'htmldocs',
  type : 'boolean',
  value : false,
  description : 'Enable/Disable HTML documentation')
option(
  'manpages',
  type : 'boolean',
  value : false,
  description : 'Enable/Disable building and installing manual pages')
option(
  'tests',
  type : 'boolean',
  value : true,
  description : 'Enable/Disable test suite')
option(
  'fuzzing',
  type : 'boolean',
  value : false,
  description : 'Enable/Disable fuzz tests')
